# qtcpp

./: CMakeLists.txt  README.md
example/: array_usage.cc  bad_request.cc  basic_usage.cc  order_proto.cc
example/include/json_proto/error_response/: ApiError.hpp  ApiError.json  ApiError.schema  BadRequest.1.json  BadRequest.2.json  BadRequest.hpp  BadRequest.schema
example/include/json_proto/order_proto/: OrderProto.hpp  OrderProto.json  OrderProto.schema
example/include/json_proto/user_profile/: UserProfile.hpp  UserProfile.json  UserProfile.schema
qtcpp/: config.yaml  qtcpp
